Undo changes for entities