@@ -15,6 +15,7 @@ import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Entity(name = "rosters")
 public class RosterEntity implements Serializable {
@@ -159,6 +160,7 @@ public class RosterEntity implements Serializable {
                     final AttributionRelationship relationship = new AttributionRelationship(roster, patientEntity, now);
                     relationship.setPeriodEnd(expires);
                     return relationship;
-                }).toList();
+                })
+                .collect(Collectors.toList());
     }
 }
